<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/Home" />
    <item
        android:id="@+id/nav_jobs"
        android:icon="@drawable/baseline_assignment_24"
        android:title="@string/jobs" />
    <item
        android:id="@+id/nav_punch"
        android:icon="@drawable/punchlog"
        android:title="Punch Log" />


</menu>