<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/help"
        android:icon="@drawable/baseline_assignment_24"
        android:id="@+id/nav_help"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/outline_account_circle_24"
        android:title="@string/Profile" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/outline_build_24"
        android:title="@string/settings_drawer_menu"/>
</menu>